--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,24 +33,33 @@ jobs:
           echo "full_image_name=${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}-${{ steps.extract_branch.outputs.branch }}"  >> $GITHUB_OUTPUT
           echo "image_name=${{ env.ECR_REPOSITORY }}-${{ steps.extract_branch.outputs.branch }}"  >> $GITHUB_OUTPUT
 
-      - name: Set Application Setting
-        id: set-application-setting
-        run: |
-          if [ "${{ steps.extract_branch.outputs.branch }}" == "staging" ]; then
-            APPLICATION_SETTING="${{ secrets.APPLICATION_SETTING_STAGING }}"
-          elif [ "${{ steps.extract_branch.outputs.branch }}" == "production" ]; then
-            APPLICATION_SETTING="${{ secrets.APPLICATION_SETTING_PRODUCTION }}"
-          else
-            exit 1
-          fi
-          echo "application_setting=${APPLICATION_SETTING}" >> $GITHUB_OUTPUT
-          echo "${{ steps.set-application-setting.outputs.application_setting }}" | awk '{print length}'
+      #      - name: Set Application Setting
+      #        id: set-application-setting
+      #        run: |
+      #          if [ "${{ steps.extract_branch.outputs.branch }}" == "staging" ]; then
+      #            APPLICATION_SETTING="${{ secrets.APPLICATION_SETTING_STAGING }}"
+      #          elif [ "${{ steps.extract_branch.outputs.branch }}" == "production" ]; then
+      #            APPLICATION_SETTING="${{ secrets.APPLICATION_SETTING_PRODUCTION }}"
+      #          else
+      #            exit 1
+      #          fi
+      #          echo "application_setting=${APPLICATION_SETTING}" >> $GITHUB_OUTPUT
+      #          echo "${{ steps.set-application-setting.outputs.application_setting }}" | awk '{print length}'
 
-      - name: Create application.yml
+      - name: Create application.yml (staging)
+        if: ${{ steps.extract_branch.outputs.branch }} == 'staging'
         run: |
           cd ./src/main/resources
-          touch ./application-${{ steps.extract_branch.outputs.branch }}.yml
-          echo "${{ steps.set-application-setting.outputs.application_setting }}" > ./application-${{ steps.extract_branch.outputs.branch }}.yml
+          touch ./application-staging.yml
+          echo "${{ secrets.APPLICATION_SETTING_STAGING }}" > ./application-staging.yml
+        shell: bash
+
+      - name: Create application.yml (production)
+        if: ${{ steps.extract_branch.outputs.branch }} == 'production'
+        run: |
+          cd ./src/main/resources
+          touch ./application-production.yml
+          echo "${{ secrets.APPLICATION_SETTING_PRODUCTION }}" > ./application-production.yml
         shell: bash
 
       - name: Gradle Setup
