--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,8 +33,7 @@ jobs:
           echo "full_image_name=${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}-${{ steps.extract_branch.outputs.branch }}"  >> $GITHUB_OUTPUT
           echo "image_name=${{ env.ECR_REPOSITORY }}-${{ steps.extract_branch.outputs.branch }}"  >> $GITHUB_OUTPUT
 
-      - name: Create application.yml (staging)
-        if: ${{ steps.extract_branch.outputs.branch }} == 'staging'
+      - name: Create application.yml
         run: |
           cd ./src/main/resources
           if [ "${{ steps.extract_branch.outputs.branch }}" == "staging" ]; then
@@ -64,11 +63,20 @@ jobs:
       - name: Build with Gradle
         run: gradle build -x test
 
-      - name: Configure AWS Credentials
+      - name: Configure AWS Credentials (staging)
+        if: [ "${{ steps.extract_branch.outputs.branch }}" == "staging" ]
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_STAGING }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_STAGING }}
+          aws-region: ${{ env.AWS_REGION }}
+
+      - name: Configure AWS Credentials (production)
+        if: [ "${{ steps.extract_branch.outputs.branch }}" == "production" ]
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_PRODUCTION }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_PRODUCTION }}
           aws-region: ${{ env.AWS_REGION }}
 
       - name: Login to Amazon ECR
@@ -103,12 +111,23 @@ jobs:
           echo "full_image_name=${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}-${{ steps.extract_branch.outputs.branch }}"  >> $GITHUB_OUTPUT
           echo "image_name=${{ env.ECR_REPOSITORY }}-${{ steps.extract_branch.outputs.branch }}"  >> $GITHUB_OUTPUT
 
+      - name: Set host
+        id: set-aws
+        run: |
+          if [ "${{ steps.extract_branch.outputs.branch }}" == "staging" ]; then
+            echo "host=${{ secrets.AWS_HOST_DEPLOY_STAGING }}"  >> $GITHUB_OUTPUT
+            echo "ssh_key=${{ secrets.AWS_HOST_DEPLOY_STAGING }}"  >> $GITHUB_OUTPUT
+          elif [ "${{ steps.extract_branch.outputs.branch }}" == "production" ]; then
+            echo "host=${{ secrets.AWS_HOST_DEPLOY_PRODUCTION }}"  >> $GITHUB_OUTPUT
+          fi
+        shell: bash
+
       - name: Deploy on server
         uses: appleboy/ssh-action@v0.1.10
         with:
-          host: ${{ secrets.AWS_HOST_DEPLOY }}
+          host: ${{ steps.set-aws.outputs.host }}
           username: ${{ secrets.AWS_SSH_USERNAME }}
-          key: ${{ secrets.AWS_SSH_KEY }}
+          key: ${{ steps.set-aws.outputs.ssh_key }}
           script_stop: true
           script: |
             password=$(aws ecr get-login-password --region ${{ env.AWS_REGION }})
