--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -64,7 +64,7 @@ jobs:
         run: gradle build -x test
 
       - name: Configure AWS Credentials (staging)
-        if: [ "${{ steps.extract_branch.outputs.branch }}" == "staging" ]
+        if: "${{ steps.extract_branch.outputs.branch }}" == "staging"
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_STAGING }}
@@ -72,7 +72,7 @@ jobs:
           aws-region: ${{ env.AWS_REGION }}
 
       - name: Configure AWS Credentials (production)
-        if: [ "${{ steps.extract_branch.outputs.branch }}" == "production" ]
+        if: "${{ steps.extract_branch.outputs.branch }}" == "production"
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_PRODUCTION }}
