--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -116,29 +116,56 @@ jobs:
         run: |
           if [ "${{ steps.extract_branch.outputs.branch }}" == "staging" ]; then
             echo "host=${{ secrets.AWS_HOST_DEPLOY_STAGING }}"  >> $GITHUB_OUTPUT
-            SSH_KEY=$(cat << EOF
-            ${{ secrets.AWS_SSH_KEY_STAGING }}
-            EOF
-            )
             echo "ssh_key=${SSH_KEY}"  >> $GITHUB_OUTPUT
             echo "username=${{ secrets.AWS_SSH_USERNAME_STAGING }}"  >> $GITHUB_OUTPUT
           elif [ "${{ steps.extract_branch.outputs.branch }}" == "production" ]; then
             echo "host=${{ secrets.AWS_HOST_DEPLOY_PRODUCTION }}"  >> $GITHUB_OUTPUT
-            SSH_KEY=$(cat << EOF
-            ${{ secrets.AWS_SSH_KEY_PRODUCTION }}
-            EOF
-            )
             echo "ssh_key=${SSH_KEY}"  >> $GITHUB_OUTPUT
             echo "username=${{ secrets.AWS_SSH_USERNAME_PRODUCTION }}"  >> $GITHUB_OUTPUT
           fi
         shell: bash
 
-      - name: Deploy on server
+      #      - name: Deploy on server (staging)
+      #        uses: appleboy/ssh-action@v0.1.10
+      #        if: contains(github.ref, 'staging')
+      #        with:
+      #          host: ${{ steps.set-aws.outputs.host }}
+      #          username: ${{ steps.set-aws.outputs.username }}
+      #          key: ${{ steps.set-aws.outputs.ssh_key }}
+      #          script_stop: true
+      #          script: |
+      #            password=$(aws ecr get-login-password --region ${{ env.AWS_REGION }})
+      #            docker login --username AWS --password $password ${{ env.ECR_REGISTRY }}
+      #            docker pull ${{ steps.set-image-name.outputs.full_image_name }}:latest
+      #            docker container stop ${{ steps.set-image-name.outputs.image_name }} 2>/dev/null || true
+      #            docker container rm ${{ steps.set-image-name.outputs.image_name }} 2>/dev/null || true
+      #            docker run --net=host --restart on-failure:10 -d -p 8080:8080 --name ${{ steps.set-image-name.outputs.image_name }} ${{ steps.set-image-name.outputs.full_image_name }}:latest
+      #            docker images | awk '$1 == "${{ steps.set-image-name.outputs.full_image_name }}" && $2 == "<none>" {print $3}' | xargs -I {} docker rmi {}
+
+      - name: Deploy on server (staging)
         uses: appleboy/ssh-action@v0.1.10
+        if: contains(github.ref, 'staging')
         with:
           host: ${{ steps.set-aws.outputs.host }}
           username: ${{ steps.set-aws.outputs.username }}
-          key: ${{ steps.set-aws.outputs.ssh_key }}
+          key: ${{ secrets.AWS_SSH_KEY_STAGING }}
+          script_stop: true
+          script: |
+            password=$(aws ecr get-login-password --region ${{ env.AWS_REGION }})
+            docker login --username AWS --password $password ${{ env.ECR_REGISTRY }}
+            docker pull ${{ steps.set-image-name.outputs.full_image_name }}:latest
+            docker container stop ${{ steps.set-image-name.outputs.image_name }} 2>/dev/null || true
+            docker container rm ${{ steps.set-image-name.outputs.image_name }} 2>/dev/null || true
+            docker run --net=host --restart on-failure:10 -d -p 8080:8080 --name ${{ steps.set-image-name.outputs.image_name }} ${{ steps.set-image-name.outputs.full_image_name }}:latest
+            docker images | awk '$1 == "${{ steps.set-image-name.outputs.full_image_name }}" && $2 == "<none>" {print $3}' | xargs -I {} docker rmi {}
+
+      - name: Deploy on server (production)
+        uses: appleboy/ssh-action@v0.1.10
+        if: contains(github.ref, 'production')
+        with:
+          host: ${{ steps.set-aws.outputs.host }}
+          username: ${{ steps.set-aws.outputs.username }}
+          key: ${{ secrets.AWS_SSH_KEY_PRODUCTION }}
           script_stop: true
           script: |
             password=$(aws ecr get-login-password --region ${{ env.AWS_REGION }})
