--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -153,8 +153,17 @@ jobs:
           script: |
             password=$(aws ecr get-login-password --region ${{ env.AWS_REGION }})
             docker login --username AWS --password $password ${{ env.ECR_REGISTRY }}
-            docker pull ${{ steps.set-image-name.outputs.full_image_name }}:latest
-            docker container stop ${{ steps.set-image-name.outputs.image_name }} 2>/dev/null || true
-            docker container rm ${{ steps.set-image-name.outputs.image_name }} 2>/dev/null || true
-            docker run --net=host --restart on-failure:10 -d -p 8080:8080 --name ${{ steps.set-image-name.outputs.image_name }} ${{ steps.set-image-name.outputs.full_image_name }}:latest
-            docker images | awk '$1 == "${{ steps.set-image-name.outputs.full_image_name }}" && $2 == "<none>" {print $3}' | xargs -I {} docker rmi {}
+            docker pull ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}-staging:latest
+            docker container stop ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}-production 2>/dev/null || true
+            docker container rm ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}-production 2>/dev/null || true
+            docker run --net=host --restart on-failure:10 -d -p 8080:8080 --name ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}-staging:latest
+            docker images | awk '$1 == "${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}-production" && $2 == "<none>" {print $3}' | xargs -I {} docker rmi {}
+            
+            #            password=$(aws ecr get-login-password --region ${{ env.AWS_REGION }})
+            #            docker login --username AWS --password $password ${{ env.ECR_REGISTRY }}
+            #            docker pull ${{ steps.set-image-name.outputs.full_image_name }}:latest
+            #            docker container stop ${{ steps.set-image-name.outputs.image_name }} 2>/dev/null || true
+            #            docker container rm ${{ steps.set-image-name.outputs.image_name }} 2>/dev/null || true
+            #            docker run --net=host --restart on-failure:10 -d -p 8080:8080 --name ${{ steps.set-image-name.outputs.image_name }} ${{ steps.set-image-name.outputs.full_image_name }}:latest
+            #            docker images | awk '$1 == "${{ steps.set-image-name.outputs.full_image_name }}" && $2 == "<none>" {print $3}' | xargs -I {} docker rmi {}
+                    
