--- a/src/main/resources/application-development.yml
+++ b/src/main/resources/application-development.yml
@@ -15,6 +15,14 @@ spring:
     show-sql: false
     hibernate:
       ddl-auto: update
+  redis:
+    host: localhost
+    port: 6379
+
+aws:
+  dynamodb:
+    table:
+      name: "tokpeanut-staging-dynamodb"
 
 cloud:
   aws:
