feat: 람다 연동 준비 완료

--- a/src/main/resources/application-development.yml
+++ b/src/main/resources/application-development.yml
@@ -23,6 +23,9 @@ aws:
   dynamodb:
     table:
       name: "tokpeanut-staging-dynamodb"
+  lambda:
+    analysis-start:
+      name: "arn:aws:lambda:ap-northeast-2:906389837735:function:yubin-dalcom-test"
 
 cloud:
   aws:
